# scmdoc

./: README.md  TODO.md  doclisp.cabal  fourmolu.yaml  scmdoc.cabal
.githooks/: pre-commit
app/: Main.hs
golden/: rebuild.sh  run.sh
golden/example-comment/: expected.html  input.scm
golden/exported-procedure/: expected.html  input.scm
golden/include-file/: expected.html  input.scm
golden/include-file/testdata/: include.scm
golden/multiple-exports/: input.scm
golden/multiple-exports/expected/scmdoc/test/: simple.html
golden/multiple-inputs/: lib1.scm  lib2.scm
golden/multiple-inputs/expected/scmdoc/first/: library.html
golden/multiple-inputs/expected/scmdoc/second/: library.html
golden/multiple-libraries/: input.scm
golden/record-type/: input.scm
golden/record-type/expected/scmdoc/: record.html
golden/rename-identifier/: expected.html  input.scm
golden/rename-identifier/expected/scmdoc/test/: simple.html
golden/section-comments/: expected.html  input.scm
golden/section-comments/expected/scmdoc/test/: simple.html
golden/syntax-definition/: input.scm
golden/syntax-definition/expected/example/: syntax.html
golden/unexported-identifier/: expected.html  input.scm
src/: MyLib.hs  SchemeDoc.hs  Types.hs
src/Parser/: Scheme.hs  Util.hs
src/SchemeDoc/: Error.hs  Formatter.hs  Include.hs  Output.hs  SyntaxError.hs  Types.hs  Util.hs
src/SchemeDoc/Documentation/: AST.hs  Markdown.hs
src/SchemeDoc/Format/: Constant.hs  Formatter.hs  Library.hs  Procedure.hs  Record.hs  Syntax.hs  Types.hs  Util.hs  Variable.hs
src/SchemeDoc/Parser/: Number.hs  R7RS.hs  Util.hs
src/SchemeDoc/Scheme/: Documented.hs  Includer.hs  Library.hs
test/: Formatter.hs  Library.hs  Main.hs  Parser.hs  Record.hs  SchemeParser.hs  Util.hs
test/testdata/: simple-include.scm
