cabal-version:      3.0
name:               scmdoc
version:            0.1.0.0
synopsis:           R7RS Scheme documentation tool
description:        Inline documentation tool for R7RS Scheme based on source code comments

license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net

category:           Development
build-type:         Simple

extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SchemeDoc
                    , SchemeDoc.Parser.R7RS
                    , SchemeDoc.Parser.Util
                    , SchemeDoc.Scheme.Library
    hs-source-dirs:   src
    default-language: Haskell2010

    build-depends:
        base   ^>=4.15.1.0,
        parsec ^>=3.1.15.1

executable scmdoc
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010

    build-depends:
        base   ^>=4.15.1.0,
        parsec ^>=3.1.15.1,
        scmdoc

test-suite scmdoc-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    SchemeParser

    build-depends:
        base         ^>=4.15.1.0,
        tasty        ^>=1.4.2.3,
        tasty-hunit  ^>=0.10.0.3,
        parsec       ^>=3.1.15.1,
        scmdoc
