cabal-version:      3.0
name:               scmdoc
version:            0.1.0
synopsis:           R7RS Scheme documentation tool
description:        Inline documentation tool for R7RS Scheme based on source code comments

license:            AGPL-3.0-only
license-file:       LICENSE
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net

category:           Development
build-type:         Simple

extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SchemeDoc
                    , SchemeDoc.Types
                    , SchemeDoc.Error
                    , SchemeDoc.Parser.R7RS
                    , SchemeDoc.Format.Variable
                    , SchemeDoc.Format.Syntax
                    , SchemeDoc.Format.Formatter
                    , SchemeDoc.Format.Procedure
                    , SchemeDoc.Format.Record
                    , SchemeDoc.Format.Library
                    , SchemeDoc.Format.Types
                    , SchemeDoc.Format.Util
    other-modules: SchemeDoc.Parser.Number
                 , SchemeDoc.Parser.Util
    hs-source-dirs:   src
    default-language: Haskell2010

    build-depends:
        base         >=4.15.0.0 && <4.20.0.0,
        parsec       ^>=3.1.15.1,
        blaze-html   ^>=0.9.1.2,
        cmark-gfm    ^>=0.2.5,
        text

executable scmdoc
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010

    build-depends:
        base                 >=4.15.0.0 && <4.20.0.0,
        parsec               ^>=3.1.15.1,
        directory            ^>=1.3.8.0,
        filepath             ^>=1.4.100.0,
        blaze-html           ^>=0.9.1.2,
        optparse-applicative  >=0.16.1 && <0.17,
        text,
        scmdoc

test-suite scmdoc-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Parser
                    , Library
                    , Record
                    , Formatter
                    , Util

    build-depends:
        base         >=4.15.0.0 && <=4.18.0.0,
        tasty        ^>=1.4.2.3,
        tasty-hunit  ^>=0.10.0.3,
        parsec       ^>=3.1.15.1,
        text,
        scmdoc
